[tool.poetry]
name = "oauth2-module"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "oauth2_module"}]

[tool.poetry.dependencies]
python = "^3.9"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^0.21.0"
PyJWT = {extras = ["crypto"], version = "^2.5.0"}
unify = "^0.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.8.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
mypy = "^0.971"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
