[tool.poetry]
name = "MySimplePythonOauth2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "MySimplePythonOauth2"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.8.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
mypy = "^0.971"
pylint = "^2.15.3"
unify = "^0.5"

[tool.poetry.group.auth_token.dependencies]
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
PyJWT = {extras = ["crypto"], version = "^2.5.0"}
python-dotenv = "^0.21.0"

[tool.poetry.group.accounts.dependencies]
pynamodb = "^5.2.1"
pydantic = {extras = ["email"], version = "^1.10.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
